--- a/fcchtml_balancesheet.css
+++ b/fcchtml_balancesheet.css
@@ -61,3 +61,11 @@ set to 0.5rem calc(1.25rem + 2px) 0.5rem 0. */
 Create a tr[class="total"] selector to target specifically your tr elements with the total class.  */
 
 /*The :nth-of-type() pseudo-selector is used to target specific elements based on their order among siblings of the same type.*/
+
+/*
+change BG color on hover, tr[element] .total[class selector]
+*/
+
+tr.total:hover {
+  background-color: #99c9ff;
+}
