--- a/fcchtml_balancesheet.css
+++ b/fcchtml_balancesheet.css
@@ -235,4 +235,13 @@ Media queries are commonly used to apply CSS based on the viewport width using t
 }
 
 /* Set overflow to hidden in the first .keys selector, to take care of this issue. STEP31
-This property will hide any element that is pushed outside the set width value of .keys. */
+This property will hide any element that is pushed outside the set width value of .keys. 
+
+Logical operators can be used to construct more complex media queries. The and logical operator is used to query two media conditions.
+*/
+
+For example, a media query that targets a display width between 500px and 1000px would be:
+
+@media (min-width: 500px) and (max-width: 1000px){
+
+}
