--- a/fcc_building.css
+++ b/fcc_building.css
@@ -14,3 +14,54 @@ STEP 14
 
 ---------------------------------------------------------
 
+/*
+
+That didn't work, because the variables you declared in .bb1 do not cascade to the .bb2 and .bb3 sibling elements. 
+That's just how CSS works. Because of this, variables are often declared in the :root selector. This is the highest level selector in CSS; 
+putting your variables there will make them usable everywhere. Add the :root selector to the top of your stylesheet, and move all your 
+variable declarations there.
+
+.bb1 {
+  width: 10%;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  --building-color1: #aa80ff;
+  --building-color2: #66cc99;
+  --building-color3: #cc6699;
+
+.bb1d {
+  width: 100%;
+  height: 70%;
+  background-color: var(--building-color1);
+}
+
+.bb2 {
+  width: 10%;
+  height: 50%;
+  background-color: var(--building-color2, green);
+}
+
+.bb3 {
+  width: 10%;
+  height: 55%;
+  background-color: var(--building-color3, pink);
+
+*/
+
+:root {
+  --building-color1: #aa80ff;
+  --building-color2: #66cc99;
+  --building-color3: #cc6699;
+  --building-color4: #538cc6;
+}
+
+------------------------------------------------------------------------------------------------------------------
+/*
+Add the same display, align-items, and justify-content properties and values to .foreground-buildings that you used on 
+.background-buildings. Again, this will use Flexbox to evenly space the buildings across the bottom of their container.
+*/
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-evenly;
