--- a/fcc_sassnotes.scss
+++ b/fcc_sassnotes.scss
@@ -1,6 +1,10 @@
 /*
 Use @each to Map Over Items in a List
 https://www.freecodecamp.org/learn/front-end-development-libraries/sass/use-each-to-map-over-items-in-a-list
+
+refs:
+https://sass-lang.com/documentation/at-rules/control/each
+https://sass-lang.com/documentation/values/maps
 */
 <style type='text/scss'>
 
