--- a/fcc_sassnotes.scss
+++ b/fcc_sassnotes.scss
@@ -18,8 +18,33 @@ https://sass-lang.com/documentation/values/maps
     height: 200px;
     width: 200px;
   }
-</style>
+
 
 <div class="blue-bg"></div>
 <div class="black-bg"></div>
 <div class="red-bg"></div>
+
+
+/*
+https://www.freecodecamp.org/learn/front-end-development-libraries/sass/apply-a-style-until-a-condition-is-met-with-while
+*/
+
+$x: 1;
+@while $x < 6 {
+
+  .text-#{$x} { font-size: 15px * $x;}
+  $x: $x + 1;
+
+}
+
+<p class="text-1">Hello</p>
+<p class="text-2">Hello</p>
+<p class="text-3">Hello</p>
+<p class="text-4">Hello</p>
+<p class="text-5">Hello</p>
+
+
+
+
+
+</style>
